--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,9 @@
-.App {
-  text-align: center;
+body {
+  background: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+video {
+  transform: rotateY(180deg);
 }
 
 .App-header {
